# good_driver

./: .gitignore  Makefile  README.md
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml
backend/: download_model.py  pyproject.toml
backend/good_driver/: app.py  config.py  model.py  novatek_gps.py  physics.py  segmentation_mask.py  static_files.py  tracker.py
backend/good_driver/api/: __init__.py  analytics.py  calibrate.py  footage.py  health.py  model.py  settings.py
backend/good_driver/api/analytics/: __init__.py  common.py  safety_index.py  speed_distribution.py  top_speeding.py  top_tailgating.py
backend/tests/: test_calibrate.py  test_health.py
desktop/: good_driver.spec  launcher.py
frontend/: CLAUDE.md  index.html  package-lock.json
frontend/src/: App.tsx
frontend/src/components/: Analytics.tsx  Calibrate.tsx  DebugImages.tsx  Settings.tsx  TrainingDataset.tsx  UploadFootage.tsx
frontend/src/components/analytics/: SafetyIndex.tsx  SafetyIndexCumulative.tsx  SpeedDistribution.tsx  SpeedDistributionCumulative.tsx  TopSpeeding.tsx  TopTailgating.tsx
osrm/: car.lua.patch
